name:                   Abstract-Impl-Libs
version:                0.0.1
stability:              provisional
license:                BSD3
license-file:           LICENSE

cabal-version:          >= 1.8
build-type:             Simple

author:                 Andrew Darqui <andrew.darqui@gmail.com>
maintainer:             Andrew Darqui <andrew.darqui@gmail.com>
homepage:               github.com/adarqui/Abstract-Impl-Libs

category:               Experimental
synopsis:               Abstract

Library
 hs-source-dirs:        src
 exposed-modules:
                        Abstract.Impl.Libs.Lock
                        Abstract.Impl.Libs.Lock.ConcurrentLock

                        Abstract.Impl.Libs.Counter
                        Abstract.Impl.Libs.Counter.MVar.Internal
                        Abstract.Impl.Libs.Counter.MVar.Inc
                        Abstract.Impl.Libs.Counter.MVar.Dec
                        Abstract.Impl.Libs.Counter.MVar.Get
                        Abstract.Impl.Libs.Counter.IORef.Internal
                        Abstract.Impl.Libs.Counter.IORef.Inc
                        Abstract.Impl.Libs.Counter.IORef.Dec
                        Abstract.Impl.Libs.Counter.IORef.Get

                        Abstract.Impl.Libs.Queue
                        Abstract.Impl.Libs.Queue.MVar.Internal
                        Abstract.Impl.Libs.Queue.MVar.Enq
                        Abstract.Impl.Libs.Queue.MVar.Deq
                        Abstract.Impl.Libs.Queue.Chan.Internal
                        Abstract.Impl.Libs.Queue.Chan.Enq
                        Abstract.Impl.Libs.Queue.Chan.Deq

                        Abstract.Impl.Libs.Compression.Raw
                        Abstract.Impl.Libs.Compression.GZip
                        Abstract.Impl.Libs.Compression.BZip
                        Abstract.Impl.Libs.Compression.LZ4

 build-depends:         base >= 3 && <5, concurrent-extra, bytestring, bzlib, zlib, lz4, Abstract-Interfaces
 ghc-options:           -Wall -rtsopts
